--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
+
 	<div th:fragment="header">
 		<header class="header position-relative" style="z-index: 1;">
 			<!-- 네비게이션 -->
@@ -32,27 +33,28 @@
 						<!-- 로그인, 회원가입, 멤버, 로그아웃 -->
 						<hr class="d-md-hidden" />
 						<ul class="navbar-nav align-items-center">
-							<li class="nav-item">
-								<a class="nav-link" href="./view/login.html">로그인</a>
+							<li class="nav-item" sec:authorize="isAnonymous()">
+								<a class="nav-link" href="/auth/login">로그인</a>
 							</li>
-							<li class="nav-item">
-								<a class="nav-link"href="./view/signup.html">회원가입</a>
+							<li class="nav-item" sec:authorize="isAnonymous()">
+								<a class="nav-link"href="/auth/signup">회원가입</a>
 							</li>
-							<li class="nav-item mx-2 visually-hidden">
+							<li class="nav-item mx-2" sec:authorize="isAuthenticated()">
 								<a class="nav-link p-0" href="#">
-									<img class="rounded-circle" src="../images/profile-img-640.jpg" alt="profile-img" width="32" height="32">
+									<img class="rounded-circle" src="/images/test/profile-img-640.jpg" alt="profile-img" width="32" height="32">
 									<span class="align-middle ps-1">Username</span>
 								</a>
 							</li>
 							<li class="py-1"></li>
-							<li class="nav-item visually-hidden">
-								<a class="nav-link text-danger" href="#">로그아웃</a>
+							<li class="nav-item" sec:authorize="isAuthenticated()">
+								<a class="nav-link text-danger" href="/auth/logout">로그아웃</a>
 							</li>
 						</ul>
 					</div>
 				</div>
 			</nav>
 		</header>
+		
 	</div>
 </body>
 </html>
