--- a/src/main/resources/templates/layouts/layout2.html
+++ b/src/main/resources/templates/layouts/layout2.html
@@ -13,7 +13,16 @@
 </head>
 <body>
 	<div th:replace="fragments/header::header"></div>
-	<div layout:fragment="content" class="content"></div>
+	<main>
+		<div class="container my-4">
+			<div class="row gy-4">
+				<!-- 사이드바 -->
+				<div th:replace="fragments/mypageSidebar::mypageSidebar"></div>
+				<div layout:fragment="content" class="content"></div>
+			</div>
+		</div>
+	</main>
+	</div>
 	<div th:replace="fragments/footer::footer"></div>
 	<script src="/js/global.js"></script>
 	<th:block layout:fragment="script-bottom"></th:block>
