--- a/src/main/resources/templates/partners/partnerList.html
+++ b/src/main/resources/templates/partners/partnerList.html
@@ -33,39 +33,28 @@
 					<!-- 검색 및 필터 -->
 					<div class="col-lg-3">
 						<div  class="border rounded-4 bg-white p-4 sticky-top" style="top: 1rem;">
-							<form class="d-flex flex-column" role="search" action="./findPartner.html">
+							<form name="frm" class="d-flex flex-column" role="search" th:action="@{/partners}" th:object="${partnerSearchDto}">
 								<!-- 검색창 -->
-								<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+								<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" th:field="*{searchQuery}">
 								
 								<div class="row">
 									<!-- 기술 스택 -->
 									<div class="col-6 col-lg-12 my-3">
 										<h5>기술 스택</h5>
 										<div class="ms-3">
-											<div class="form-check">
-												<input class="form-check-input" type="checkbox" name="stack" value="java" id="stack-1">
-												<label class="form-check-label" for="stack-1">Java</label>
+
+											<div class="form-check" th:each="stack, status : ${stackList}">
+												<input class="form-check-input" type="checkbox" name="stackIdList" th:value="${stack.id}" th:id="${'stack-' + status.index}" th:checked="${#lists.contains(partnerSearchDto.stackIdList, stack.id) ? 'checked': null}">
+												<label class="form-check-label" th:for="${'stack-' + status.index}">
+													<img th:src="${stack.imgUrl}" alt="stack-img" style="width: 18px; height: 18px;">
+													[[${stack.name}]]
+												</label>
 											</div>
-											<div class="form-check">
-												<input class="form-check-input" type="checkbox" name="stack" value="javascript" id="stack-2">
-												<label class="form-check-label" for="stack-2">Javascript</label>
-											</div>
-											<div class="form-check">
-												<input class="form-check-input" type="checkbox" name="stack" value="springboot" id="stack-3">
-												<label class="form-check-label" for="stack-3">Spring Boot</label>
-											</div>
-											<div class="form-check">
-												<input class="form-check-input" type="checkbox" name="stack" value="nodejs" id="stack-4">
-												<label class="form-check-label" for="stack-4">Nodejs</label>
-											</div>
-											<div class="form-check">
-												<input class="form-check-input" type="checkbox" name="stack" value="reactjs" id="stack-5">
-												<label class="form-check-label" for="stack-5">React js</label>
-											</div>
+
 										</div>
 									</div>
 									<!-- 등급 -->
-									<div class="col-6 col-lg-12 my-3">
+									<!-- <div class="col-6 col-lg-12 my-3">
 										<h5>등급</h5>
 										<div class="ms-3">
 											<div class="form-check">
@@ -89,11 +78,11 @@
 												<label class="form-check-label" for="grade-5">V</label>
 											</div>
 										</div>
-									</div>
+									</div> -->
 								</div>
 								<!-- 버튼 -->
 								<div class="hstack my-3">
-									<button class="btn btn-secondary ms-auto me-3" type="button">초기화</button>
+									<button class="btn btn-secondary ms-auto me-3" type="reset">초기화</button>
 									<button class="btn btn-primary me-auto me-3" type="submit">검색</button>
 								</div>
 							</form>
@@ -101,9 +90,9 @@
 					</div>
 					<!-- 프로필 카드 -->
 					<div class="col-lg-8 my-3 my-lg-0 px-4 px-sm-3">
-						<div class="row row-cols-1 row-cols-sm-2 g-2 g-lg-3 g-xxl-4 gy-4 gy-sm-2">
+						<div id="profileCardList" class="row row-cols-1 row-cols-sm-2 g-2 g-lg-3 g-xxl-4 gy-4 gy-sm-2">
 							
-							<div class="col">
+<!-- 							<div class="col">
 								<a class="text-decoration-none profile-card-link" href="./provProfile.html">
 									<div class="profile-card background-gradient-1 mx-auto">
 										<div class="profile-card__top">
@@ -124,139 +113,7 @@
 									</div>
 								</a>
 							</div>
-					 
-							<div class="col">
-								<a class="text-decoration-none profile-card-link" href="./provProfile.html">
-									<div class="profile-card background-gradient-1 mx-auto">
-										<div class="profile-card__top">
-											<div class="profile-card__grade">
-												<img src="../images/grade/Level=1.png" alt="grad-img">
-											</div>
-											<div class="profile-card__desc">
-												<h5 class="desc__greeting">Java Spring Boot 백엔드 개발자</h5>
-												<p class="desc__intro">
-													자기만의 웹사이트, 기업 관리시스템 등 다양한 서비스를 만들어드립니다.
-												</p>
-											</div>
-										</div>
-										<div class="profile-card__bottom prov-profile">
-											<img class="prov-profile__img" src="../images/profile-img-640.jpg" alt="prov-img">
-											<span class="prov-profile__name">김김김</span>
-										</div>
-									</div>
-								</a>
-							</div>
-					 
-							<div class="col">
-								<a class="text-decoration-none profile-card-link" href="./provProfile.html">
-									<div class="profile-card background-gradient-1 mx-auto">
-										<div class="profile-card__top">
-											<div class="profile-card__grade">
-												<img src="../images/grade/Level=1.png" alt="grad-img">
-											</div>
-											<div class="profile-card__desc">
-												<h5 class="desc__greeting">Java Spring Boot 백엔드 개발자</h5>
-												<p class="desc__intro">
-													자기만의 웹사이트, 기업 관리시스템 등 다양한 서비스를 만들어드립니다.
-												</p>
-											</div>
-										</div>
-										<div class="profile-card__bottom prov-profile">
-											<img class="prov-profile__img" src="../images/profile-img-640.jpg" alt="prov-img">
-											<span class="prov-profile__name">김김김</span>
-										</div>
-									</div>
-								</a>
-							</div>
-					 
-							<div class="col">
-								<a class="text-decoration-none profile-card-link" href="./provProfile.html">
-									<div class="profile-card background-gradient-1 mx-auto">
-										<div class="profile-card__top">
-											<div class="profile-card__grade">
-												<img src="../images/grade/Level=1.png" alt="grad-img">
-											</div>
-											<div class="profile-card__desc">
-												<h5 class="desc__greeting">Java Spring Boot 백엔드 개발자</h5>
-												<p class="desc__intro">
-													자기만의 웹사이트, 기업 관리시스템 등 다양한 서비스를 만들어드립니다.
-												</p>
-											</div>
-										</div>
-										<div class="profile-card__bottom prov-profile">
-											<img class="prov-profile__img" src="../images/profile-img-640.jpg" alt="prov-img">
-											<span class="prov-profile__name">김김김</span>
-										</div>
-									</div>
-								</a>
-							</div>
-					 
-							<div class="col">
-								<a class="text-decoration-none profile-card-link" href="./provProfile.html">
-									<div class="profile-card background-gradient-1 mx-auto">
-										<div class="profile-card__top">
-											<div class="profile-card__grade">
-												<img src="../images/grade/Level=1.png" alt="grad-img">
-											</div>
-											<div class="profile-card__desc">
-												<h5 class="desc__greeting">Java Spring Boot 백엔드 개발자</h5>
-												<p class="desc__intro">
-													자기만의 웹사이트, 기업 관리시스템 등 다양한 서비스를 만들어드립니다.
-												</p>
-											</div>
-										</div>
-										<div class="profile-card__bottom prov-profile">
-											<img class="prov-profile__img" src="../images/profile-img-640.jpg" alt="prov-img">
-											<span class="prov-profile__name">김김김</span>
-										</div>
-									</div>
-								</a>
-							</div>
-					 
-							<div class="col">
-								<a class="text-decoration-none profile-card-link" href="./provProfile.html">
-									<div class="profile-card background-gradient-1 mx-auto">
-										<div class="profile-card__top">
-											<div class="profile-card__grade">
-												<img src="../images/grade/Level=1.png" alt="grad-img">
-											</div>
-											<div class="profile-card__desc">
-												<h5 class="desc__greeting">Java Spring Boot 백엔드 개발자</h5>
-												<p class="desc__intro">
-													자기만의 웹사이트, 기업 관리시스템 등 다양한 서비스를 만들어드립니다.
-												</p>
-											</div>
-										</div>
-										<div class="profile-card__bottom prov-profile">
-											<img class="prov-profile__img" src="../images/profile-img-640.jpg" alt="prov-img">
-											<span class="prov-profile__name">김김김</span>
-										</div>
-									</div>
-								</a>
-							</div>
-					 
-							<div class="col">
-								<a class="text-decoration-none profile-card-link" href="./provProfile.html">
-									<div class="profile-card background-gradient-1 mx-auto">
-										<div class="profile-card__top">
-											<div class="profile-card__grade">
-												<img src="../images/grade/Level=1.png" alt="grad-img">
-											</div>
-											<div class="profile-card__desc">
-												<h5 class="desc__greeting">Java Spring Boot 백엔드 개발자</h5>
-												<p class="desc__intro">
-													자기만의 웹사이트, 기업 관리시스템 등 다양한 서비스를 만들어드립니다.
-												</p>
-											</div>
-										</div>
-										<div class="profile-card__bottom prov-profile">
-											<img class="prov-profile__img" src="../images/profile-img-640.jpg" alt="prov-img">
-											<span class="prov-profile__name">김김김</span>
-										</div>
-									</div>
-								</a>
-							</div>
-		
+ -->		
 						</div>
 					</div>
 		
@@ -264,5 +121,8 @@
 			</section>
 		</main>
 	</div>
+<th:block layout:fragment="script-bottom">
+	<script th:src="@{/js/partnerList.js}"></script>
+</th:block>
 </body>
 </html>
