--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,7 +24,7 @@
 								<a class="nav-link" th:href="@{/partners}">파트너찾기</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="./view/portfolios.html">포트폴리오</a>
+								<a class="nav-link" th:href="@{/portfolios}">포트폴리오</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" th:href="@{/about}">이용방법</a>
