--- a/src/main/resources/templates/partners/partnerList.html
+++ b/src/main/resources/templates/partners/partnerList.html
@@ -7,6 +7,7 @@
 <link href="/css/global.css" rel="stylesheet">
 <link href="/css/findPartner.css" rel="stylesheet">
 </head>
+<body>
 	<div layout:fragment="content">
 		<main >
 			<!-- 배너 -->
